--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "coffeeteer",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/coffeeteer/calendar-experiment/issues"
+    "url": "git+https://github.com/coffeeteer/calendar-experiment/issues"
   },
   "homepage": "https://github.com/coffeeteer/calendar-experiment#readme",
   "dependencies": {
