--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "mysql": "^2.12.0",
     "path": "^0.12.7",
     "sequelize": "^3.25.0"
+  },
+  "devDependencies": {
+    "grunt-cli": "^1.2.0"
   }
 }
